--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <html>
 
 	<head>
-		<title>pghowner.com 404</title>
+		<title>ownerspgh.com 404</title>
 	</head>
 
 	<body>
@@ -19,13 +19,13 @@
 		console.log(entire_pathname.length)
 
 		if (slugarray.length != 0 && entire_pathname.length == 0)
-			newURL = "https://www.pghbusiness.org/largefinancial?s=ownerspghcom&u=na";
+			newURL = "https://www.pghtaskforce.org/lfhome?s=ownerspghcom&u=na_0";
 
 		else
 		{
 			console.log(slugarray);
 
-			newURL = 'https://www.pghbusiness.org/largefinancial?s=ownerspghcom&u=' + entire_pathname;
+			newURL = 'https://www.pghtaskforce.org/lfhome?s=ownerspghcom&u=' + entire_pathname;
 			console.log(entire_pathname);
 			console.log(newURL)
 		}
