--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <html>
 
 	<head>
-		<title>pghowner.com index</title>
+		<title>ownerspgh.com index</title>
 	</head>
 
 
 	<body>
 		<script>
-			window.location = "https://www.pghbusiness.org/largefinancial?s=ownerspghcom&u=na";
+			window.location = "https://www.pghtaskforce.org/lfhome?s=ownerspghcom&u=na_0";
 		</script>
 	</body>
 
